[package]
name = "convenient-skiplist"
version = "0.1.0"
authors = ["David Briggs <david@dpbriggs.ca>"]
edition = "2018"
license = "GPLv3"
repository = "https://github.com/dpbriggs/convenient-skiplist"
keywords = ["skiplist", "serde", "advanced", "performant"]
categories = ["data-structures"]
documentation = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[[bin]]
name = "test"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.3"
checkers = "0.5.2"

[[bench]]
name = "convenient_skiplist"
harness = false