[package]
name = "convenient-skiplist"
version = "0.1.0"
authors = ["David Briggs <david@dpbriggs.ca>"]
edition = "2018"
license = "GPLv3"
repository = "https://github.com/dpbriggs/convenient-skiplist"
keywords = ["skiplist", "serde", "advanced", "performant"]
categories = ["data-structures"]
documentation = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
maintenance = { status = "actively-developed" }

[dev-dependencies]
criterion = "0.3"
checkers = "0.5.2"
serde_json = "1.0.44"

[[bench]]
name = "convenient_skiplist"
harness = false

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
default = []

serde_support = ["serde"]

[dependencies]
rand = "0.7.3"
serde = { version = "1.0.104", optional = true }
