[package]
name = "convenient-skiplist"
version = "1.0.1"
authors = ["David Briggs <david@dpbriggs.ca>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/dpbriggs/convenient-skiplist"
homepage = "https://github.com/dpbriggs/convenient-skiplist"
keywords = ["skiplist", "serde", "advanced", "performant", "convenient"]
categories = ["data-structures"]
documentation = "https://docs.rs/convenient-skiplist/latest/convenient_skiplist/struct.SkipList.html"
readme = "README.md"
description = "Convenient and Performant SkipList with serde support"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
checkers = "0.5.2"
serde_json = "1.0.44"

[[bench]]
name = "convenient_skiplist"
harness = false

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
default = []

serde_support = ["serde"]

[dependencies]
rand = "0.7.3"
serde = { version = "1.0.114", optional = true }
